hphp/hack/test/typecheck/reactive/pure_calls_rx.php.exp
File "pure_calls_rx.php", line 8, characters 3-6:
Reactive functions can only call other reactive functions. (Typing[4200])
File "pure_calls_rx.php", line 4, characters 10-11:
This function is reactive.
